# control-ports

./: index.html  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: cargo-vcvars.ps1  run-vcvars.ps1
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/crates/control-ports-api/: Cargo.toml
src-tauri/crates/control-ports-api/src/: main.rs
src-tauri/crates/control-ports-core/: Cargo.toml
src-tauri/crates/control-ports-core/src/: lib.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: ActionError.tsx  AppHeader.tsx  PortFilters.tsx  PortListState.tsx  PortTable.tsx  PortsPanel.tsx  ProcessIcon.tsx  ProcessTypeBadge.tsx
src/data/: processTypes.ts
src/hooks/: usePortFilters.ts  usePorts.ts
src/types/: ports.ts
src/utils/: ports.ts
